modifique ruta de la imagen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<li>Que todas aprendan a codear</li>
 			</ol>
 		<div align="center">
-	<img src="C:\Users\kathe\Desktop\laboratoria\conociendo-html\grace.jpg">
+	<img src="grace.jpg">
 		</div>
 	
 
